--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,11 @@
 ---
 galaxy_info:
   role_name: systemd_networkd
+  namespace: stackhpc
   author: "Anthony Ruhier & StackHPC Ltd"
   description: Configures systemd-networkd
   license: BSD
-  min_ansible_version: 2.5
+  min_ansible_version: "2.5"
   platforms:
   - name: EL
     versions:
@@ -18,6 +19,6 @@ galaxy_info:
   - name: Debian
     versions:
     - all
-  categories:
+  galaxy_tags:
   - networking
 dependencies: []
